# fog-machine

./: .env.local.example  .eslintrc.js  .gitignore  LICENSE  README.md  build-frontend.sh  craco.config.js  netlify.toml  package.json  tailwind.config.js  webpack.config.js
.github/workflows/: ci.yml  docker-image.yml  main.yml
deckgl_poc/: app.js
editor/: .env.local.example  .eslintrc.js  README.md  craco.config.js  package-lock.json  package.json
editor/public/: index.html
editor/src/: App.tsx  Editor.tsx  EditorMode.tsx  FlyToDialog.tsx  GithubCorner.css  I18n.ts  Import.tsx  MainMenu.tsx  Map.tsx  MoveMapDialog.tsx  UrlParserDialog.tsx  Utils.tsx  Viewer.tsx  ViewerMode.tsx
editor/src/__tests__/: roundtrip.test.ts
editor/src/__tests__/data/: cd36lltksiwo
editor/src/utils/: CommonTypes.ts  Deckgl.ts  FogCanvas.ts  FogMap.ts  GpxExport.ts  HistoryManager.ts  MapController.ts  MapDraw.ts  MapLanguage.ts  MapRenderer.ts  MapUrlUtils.ts  TimeMachineApi.ts
frontend/: .env.local.example  .eslintrc.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  GithubCorner.css  GithubCorner.tsx  Home.css  Home.tsx  I18n.ts  index.tsx
frontend/src/ErrorPage/: Error404.tsx
frontend/src/help/: Home.css  Home.tsx
frontend/src/time-machine/: Api.ts  Dashboard.tsx  DashboardMain.tsx  DashboardSnapshot.css  DashboardSnapshot.tsx  Home.css  Home.tsx  Import.tsx  api.ts
public/: index.html
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  github-action.Dockerfile
server/entity/: Cargo.toml
server/entity/src/: lib.rs  snapshot.rs  snapshot_log.rs  snapshot_share.rs  snapshot_task.rs  user.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240914_025248_add_index.rs
server/src/: data_fetcher.rs  file_storage.rs  limit.rs  main.rs  memolanes_archive_handler.rs  misc_handler.rs  pool.rs  snapshot_handler.rs  snapshot_log_handler.rs  snapshot_task_handler.rs  task_runner.rs  user_handler.rs  utils.rs
src/: App.tsx  GithubCorner.css  GithubCorner.tsx  I18n.ts  Import.tsx  MainMenu.tsx  Map.css  Map.tsx  index.tsx  reportWebVitals.ts
src/__tests__/: benchmark.test.ts  roundtrip.test.ts
src/__tests__/data/: 23e4lltkkoke  cd36lltksiwo
src/utils/: Deckgl.ts  FoGMap.ts  FogCanvas.ts  FogMap.ts  HistoryManager.ts  MapRenderer.ts  MapRenderer.tsx  TileLayer.ts  index.html
