[package]
name = "fog-machine-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
envconfig = "0.10"
dotenv = "0.15"
anyhow = "1.0"
entity = { path = "entity" }
migration = { path = "migration" }
async-trait = { version = "0.1" }
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
jwt = "0.16"
rand = "0.8.5"

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"