[package]
name = "fog-machine-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
envconfig = "0.11"
dotenv = "0.15"
anyhow = "1.0"
entity = { path = "entity" }
migration = { path = "migration" }
async-trait = { version = "0.1" }
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
jwt = "0.16"
rand = "0.8.5"
email_address = "0.2.9"
# Change back to crates.io version when https://github.com/lawliet89/rocket_cors/pull/108 is published
memolanes_core = { git = "https://github.com/MemoLanes/MemoLanes.git", rev = "cee5400" }
rocket_cors = "0.6.0"
base64 = "0.22.1"
byte-unit = "5.1.4"
tempfile = "3.12.0"
md5 = "0.7.0"
lazy_static = "1.5.0"
zip = "2.2.0"
endorphin = "0.1.9"
log = "0.4"
sea-orm-rocket = "0.5.4"
openssl = { version = "0.10.66", features = ["vendored"] }
