[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"

[dependencies.sea-orm]
version = "^0.6.0"
features = [
  "macros",
  "runtime-tokio-native-tls",
  "sqlx-postgres",
]
default-features = false